--- a/style.css
+++ b/style.css
@@ -211,6 +211,10 @@ span {
   margin-bottom: 5rem;
 }
 
+.skills{
+  background: var(--second-bg-color);
+}
+
 .skills-container {
   display:flex;
   justify-content: center;
@@ -221,7 +225,7 @@ span {
 
 .skills-container .skills-box {
   flex: 1 1 30rem;
-  background: var(--second-bg-color);
+  background: var(--bg-color);
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
   text-align: center;
@@ -249,7 +253,7 @@ span {
 }
 
 .portfolio {
-  background: var(--second-bg-color);
+  background: var(--bg-color);
 }
 
 .portfolio h2 {
